--- a/src/main/webapp/mock/s_files/skin_002.css
+++ b/src/main/webapp/mock/s_files/skin_002.css
@@ -1,6 +1,6 @@
 #dc_jqaccordion_widget-3-item{font: bold 13px Arial, sans-serif;}
 #dc_jqaccordion_widget-3-item ul, #dc_jqaccordion_widget-3-item ul li {margin: 0; padding: 0; border: none; list-style: none;}
-#dc_jqaccordion_widget-3-item ul a {padding: 10px 10px 10px 28px; background: #000 url(skins/images/bg_graphite.png) repeat-x 0 0; text-decoration:none; display: block; color: #fff; font-weight: normal;border-bottom: 1px solid #fff;}
+#dc_jqaccordion_widget-3-item ul a {padding: 10px 10px 10px 28px; background: #000 url(../../img/bg_graphite.png) repeat-x 0 0; text-decoration:none; display: block; color: #fff; font-weight: normal;border-bottom: 1px solid #fff;}
 #dc_jqaccordion_widget-3-item ul ul a {background: #343434;}
 #dc_jqaccordion_widget-3-item ul a.dcjq-parent, #dc_jqaccordion_widget-3-item ul a.dcjq-parent:hover {background: #000 url(skins/images/graphite_arrow_right.png) no-repeat 0 0; font-weight: bold; color: #fff;}
 #dc_jqaccordion_widget-3-item ul a.dcjq-parent.active {background: #000 url(skins/images/graphite_arrow_down.png) no-repeat 0 0;}
