--- a/src/main/webapp/js/guest/template/sketch_box_small.html
+++ b/src/main/webapp/js/guest/template/sketch_box_small.html
@@ -5,7 +5,7 @@
              width="400px"
              height="300px"
              ng-src="{{page.img}}"
-             alt="{{page.title}}">
+             alt="{{page.title}}"/>
 
 
         <div class="hover">
