--- a/src/main/webapp/js/guest/template/search-box.html
+++ b/src/main/webapp/js/guest/template/search-box.html
@@ -1,46 +1,37 @@
+<!--<div class="content-container">-->
 
-    <div class="tour-box" >
+    <article id="post-{{page.id}}" class="post-1398 post type-post status-publish format-standard has-post-thumbnail hentry category-statyi">
 
-        <a href="{{page.url_}}" style="text-decoration: inherit;font-style: inherit; color: inherit;">
-            <div class="tour-img">
-                <box-more-info page-id='{{page.id}}' page-type="{{page.page_type}}">
-                    <img style="cursor:pointer" id="img_{{page.id}}" ng-src="{{page.img}}"/>
-                </box-more-info>
-            </div>
-            <div class="info" >
+        <header class="entry-header">
 
-                <div class="tour-title" id = "page_title_{{page.id}}">
-                    {{page.title}}
-                </div>
-                <div class="tour-info" id = "page_info_{{page.id}}" ng-bind-html="deliberatelyTrustAsHtml(page.info)" > </div>
+            <div class="element effect-1">
+                <div class="entry-thumbnail">
+                    <img width="400" height="351"
+                         src="http://zheldor-kovka.ru/wp-content/uploads/2017/03/Как-выбрать-кованые-перила-для-лестниц-9-400x351.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="Кованая лестница" srcset="http://zheldor-kovka.ru/wp-content/uploads/2017/03/Как-выбрать-кованые-перила-для-лестниц-9-400x351.jpg 400w, http://zheldor-kovka.ru/wp-content/uploads/2017/03/Как-выбрать-кованые-перила-для-лестниц-9-300x263.jpg 300w, http://zheldor-kovka.ru/wp-content/uploads/2017/03/Как-выбрать-кованые-перила-для-лестниц-9-768x674.jpg 768w, http://zheldor-kovka.ru/wp-content/uploads/2017/03/Как-выбрать-кованые-перила-для-лестниц-9-1024x899.jpg 1024w" sizes="(max-width: 400px) 100vw, 400px">					</div><!-- .entry-thumbnail -->
 
-            </div>
-        </a>
+                <a href="http://zheldor-kovka.ru/vybor-lestnicy-dlya-chastnogo-doma-na-chto-obratit-vnimanie-pered-pokupkoj/" class="link-hover" rel="bookmark">
+						<span class="link-button">
+							Читать далее...						</span>
+                </a>
 
-        <div class="tour-buttons">
-            <div class="btn-group btn-group-justified">
-                <div class="btn-group more-info" ng-if="page.has_more_info && page.has_book">
-                    <box-more-info page-id='{{page.id}}' page-type="{{page.page_type}}">
-                        <button onmouseover="more_info_button_target(this, 1)" onmouseout="more_info_button_target(this, 2)"  selected-id="{{page.id}}" type="button" class="btn btn-default">
-                            <ng-locale name="more.info.button"></ng-locale><!--More Info-->
-                        </button>
-                    </box-more-info>
-                </div>
-                <div class="btn-group more-info" ng-if="page.has_more_info && !page.has_book" style="display: inline-block">
-                    <box-more-info page-id='{{page.id}}' page-type="{{page.page_type}}">
-                        <button onmouseover="more_info_button_target(this, 1)" onmouseout="more_info_button_target(this, 2)"  selected-id="{{page.id}}" type="button" class="btn btn-default">
-                            <ng-locale name="more.info.button"></ng-locale><!--More Info-->
-                        </button>
-                    </box-more-info>
-                </div>
-                <div class="btn-group book"  ng-if="page.has_book">
-                    <button onmouseover="book_button_target(this, 1)" onmouseout="book_button_target(this, 2)"  data-id="{{page.id}}" onclick="doModal(this);" type="button" class="btn btn-default blue">
-                        <ng-locale name="book.button"></ng-locale><!--Book-->
-                    </button>
-                </div>
+            </div><!-- .element -->
 
-            </div>
-        </div>
-    </div> 
+            <h1 class="entry-title"><a href="http://zheldor-kovka.ru/vybor-lestnicy-dlya-chastnogo-doma-na-chto-obratit-vnimanie-pered-pokupkoj/" rel="bookmark">Выбор лестницы для частного дома: на что обратить внимание перед покупкой?</a></h1>
+        </header><!-- .entry-header -->
 
 
+        <div class="entry-summary">
+            <p>Лестница является одним из главнейших конструкционных элементов строения домов, имеющих два или три этажа. Благодаря ей все члены семьи смогут комфортно и безопасно перемещаться по всему дому. Поэтому крайне важно […]</p>
+        </div><!-- .entry-summary -->
+
+
+        <footer class="entry-meta">
+
+				<span class="post-date">
+					<span class="entry-date"><a href="http://zheldor-kovka.ru/vybor-lestnicy-dlya-chastnogo-doma-na-chto-obratit-vnimanie-pered-pokupkoj/" title="09.03.2017" rel="bookmark"><time class="entry-date" datetime="09.03.2017">09.03.2017</time></a></span> <span class="byline"><span title="kovka" class="author vcard"><a class="url fn n" href="http://zheldor-kovka.ru/author/kovka/" rel="author">kovka</a></span></span>				</span>
+
+        </footer><!-- .entry-meta -->
+
+    </article><!-- #post -->
+
+<!--</div>-->
