--- a/src/main/webapp/css/general/cashier-entry.css
+++ b/src/main/webapp/css/general/cashier-entry.css
@@ -17,7 +17,7 @@ button:focus {
 }
 
 .login_forward {
-    background-image: url("./../../img/main/merchant_main_header_background.png");
+    background-image: url("./../../img/guest/l5646.jpg");
 
 }
 
