--- a/src/main/webapp/js/guest/template/selected.html
+++ b/src/main/webapp/js/guest/template/selected.html
@@ -29,7 +29,7 @@
                                 <div class="wpb_single_image wpb_content_element vc_align_left"  ng-repeat="d in iteration(selectedPage.images,1,5,1)"  >
 
                                     <figure class="wpb_wrapper vc_figure">
-                                        <a data-rel="prettyPhoto[a]"
+                                        <a rel="prettyPhoto[a]"
                                            ng-href="{{d}}"
                                            class="vc_single_image-wrapper   vc_box_border_grey prettyphoto">
                                             <img ng-src="{{d}}"
