--- a/src/main/webapp/js/guest/template/selected.html
+++ b/src/main/webapp/js/guest/template/selected.html
@@ -83,8 +83,8 @@
                                 <div class="wpb_single_image wpb_content_element vc_align_center">
                                     <h2 class="wpb_heading wpb_singleimage_heading" ng-if="p.price == null">Эскиз
                                         №{{$index+1 + sectionIndex}}</h2>
-                                    <!--<h2 class="wpb_heading wpb_singleimage_heading" ng-if="p.price != null"> Эскиз
-                                        №{{$index+1 + sectionIndex}} &nbsp; {{p.price}} р/кв.м.</h2>-->
+                                    <h2 class="wpb_heading wpb_singleimage_heading" ng-if="p.price != null"> Эскиз
+                                        №{{$index+1 + sectionIndex}} &nbsp; {{p.price}} р/кв.м.</h2>
                                     <figure class="wpb_wrapper vc_figure" ng-init="loadScrip_()">
                                         <a rel="prettyPhoto[gallery1]" href="{{p.image}}" title="№{{$index+1 + sectionIndex}}"
                                            class="vc_single_image-wrapper vc_box_border_grey test"
