--- a/src/main/webapp/css/guest/style.css
+++ b/src/main/webapp/css/guest/style.css
@@ -1728,7 +1728,7 @@ div.wp-caption.alignright .wp-caption-text {
 
 /* columns */
 
-.sidebar-2 .column, f
+.sidebar-2 .column,
 .sidebar-1 .column {
     padding: 20px 0 0 0;
 }
@@ -2083,7 +2083,7 @@ div.wp-caption.alignright .wp-caption-text {
  * Footer
  * -----------------------------------------------------------------------------
  */
-CSS
+/*CSS*/
 .site-info {
     display: none;
 }
